// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden relief exports > keeps emblem geometry reproducible 1`] = `"4333073c51b110ec1e00756815be87c8776134fe596377275b3bbf51cf6b05e4"`;

exports[`golden relief exports > keeps emblem geometry reproducible 2`] = `
{
  "contour": 100,
  "triangles": 47388,
}
`;

exports[`golden relief exports > keeps wordmark geometry reproducible 1`] = `"03e6aa42fae583d3f8519fb8f57a35661c9fd2b334907b53b88a1df8f8cc04d0"`;

exports[`golden relief exports > keeps wordmark geometry reproducible 2`] = `
{
  "contour": 100,
  "triangles": 22524,
}
`;
